# rust_client_server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/html/: home.html
